--- a/babel.config.json
+++ b/babel.config.json
@@ -1,7 +1,7 @@
 {
     "plugins": [
-        "babel/plugin-proposal-class-properties",
-        "plugin-proposal-optional-chaining",
-        "plugin-proposal-nullish-coalescing-operator"
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-optional-chaining",
+        "@babel/plugin-proposal-nullish-coalescing-operator"
     ]
 }
